roles/install_jellyfin/files/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: ansible
  annotations:
    app.kubernetes.io/description: "Jellyfin media server namespace"
