roles/install_jellyfin/files/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: ansible
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.corp.mulliken.net`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    certResolver: cloudflare
    domains:
      - main: corp.mulliken.net
        sans:
          - "*.corp.mulliken.net"
